--- a/View/actions-style.css
+++ b/View/actions-style.css
@@ -13,6 +13,7 @@
      background-color: #121726;
 }
 #wrapper-activities{
+     margin-top: 20px;
      width: 100%;
      display: flex;
      flex-direction: column;
@@ -21,7 +22,6 @@
 }
 .card-activities{
      display: flex;
-     flex-wrap: nowrap;
      justify-content: center;
      flex-direction: row;
 }
@@ -51,19 +51,18 @@
           padding: 30px 30px;
           font-size: 18px;
      }
-     .card-activities img{
-          margin: 10px;
-          border-radius: 15px;
-          width: 240px;
-          height: 200px;
+     .card-activities{
+          flex-wrap: wrap;
+          justify-content: center; 
      }
-}
-@media only screen and (max-width: 200px) {
      .card-activities img{
-          margin: 10px;
-          border-radius: 15px;
-          width: 140px;
-          height: 140px;
+          margin: 0px;
+          margin-left: 10px;
+          width: 160px;
+          height: 160px;
+          flex-direction: row;
      }
+  
 }
+
 
