--- a/View/projects-style.css
+++ b/View/projects-style.css
@@ -23,7 +23,8 @@
 .images_container{
      display: flex;
      flex-direction: row;
-     gap:14px
+     gap:14px;
+     margin-left: 20px;
 }
 
 .images_container img{
